fix scrollbar style issue

--- a/src/App.css
+++ b/src/App.css
@@ -9,17 +9,24 @@
     font-optical-sizing: auto;
 }
 
-*::-webkit-scrollbar{
-    width: 1.26rem;
+*::-webkit-scrollbar {
+  width: 1.26rem;
 }
+
 *::-webkit-scrollbar-thumb {
-    border-radius: 20px;
-    border: 6px solid transparent;
-    background-clip: content-box;
-  }
+  background-color: #4a5568; /* Dark gray similar to header background */
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
 
 *::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #d6dee1; /* Light gray similar to header text color on hover */
+}
+
   
 
